--- a/assets/css/principal.css
+++ b/assets/css/principal.css
@@ -1,60 +1,99 @@
-header{
-    margin-bottom: 40px;
-    display: flex;
-    justify-content: space-between;
+body {
+    font-family: "Castoro";
+    margin: 0%;
+    padding: 0%;
+    background-color: #FFFBF0;
+    color: black;
 }
-img{
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-    border-top-right-radius: 15px;
-}
-#logo{
-    margin-left: 5px;
-    width: 300px;
-    height:110px;
-}
-#ul1{
-    display: flex;
-}
-header ul li{
-    margin-left: 20px;
-}
-section, footer, header{
-    background-color: rgb(0,30,156);
-}
-section{
-    margin-left: 10px;
-    border-radius: 15px;
-    width: 250px;
-    height: 600px;
-}
-div{
-    padding-inline: 10px;
-}
-ul{
-    padding: 0;
-    list-style: none;
-}
-nav{
-    text-align: center;
-}
-button, a{
-    color: #5799E4;
-}
-a{
-    text-decoration-line: none;
-}
-button{
-    cursor: pointer;
-    border: none;
-    padding: 10px;
-    background-color: #30353C;
+
+button {
+    font-family: "Cartoro";
+    background-color: #C0A07A;
+    color: #FFFBF0;
     border-radius: 20px;
+    border: none;
+    padding: 7px;
 }
-footer{
-    padding: 20px;
-    margin-top: 40px;
-    width: 100%;
-    text-align: center;
+
+.italic-text {
+    font-style: italic;
 }
+
+.footer-title {
+    color: #C0A07A;
+    font-style: italic;
+    font-weight: 100;
+    font-size: 23px;
+}
+
+/* Estilização do footer */
+footer {
+    background: linear-gradient(to bottom, #FFFBF0, #DBBF9C);
+}
+
+#div-footer {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 2%;
+    gap: 12%;
+}
+
+.footer-column {
+    width: 200px;
+}
+
+    /* Contato */
+    #contato p {
+        font-style: italic;
+    }
+
+    #contact-button {
+        white-space: nowrap;
+    }
+
+    /* Newsletter */
+    form {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    input {
+        font-family: "Cartoro";
+        border-color: #DBBF9C;
+        border-radius: 20px;
+        border-style: solid;
+        padding: 7px;
+    }
+
+    #newsletter-button {
+        margin-inline: auto;
+        width: 100px;
+    }
+
+    /* Citação */
+    .quote-content{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    q {
+        font-style: italic;
+    }
+
+    cite {
+        font-style: normal;
+    }
+
+    /* Links Rápidos */
+    .links-content {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    .links-content a {
+        text-decoration: none;
+        color: black;
+    }
