--- a/assets/css/resenha.css
+++ b/assets/css/resenha.css
@@ -64,73 +64,132 @@ header nav {
     width: 100%;
 }
 
-#resenha {
-    display: grid;
-    grid-template-areas: 
-    "img1 content content content"
-    "rating assistir classificações img-protagonista";
-    grid-template-columns: 31% 23% 23% 23%;
-    grid-template-rows: 50% 50%;
-    margin-top: 20px
-}
+    /* Estilização da section resenha */
+    #content {
+        display: flex;
+        align-items: center;
+        padding: 0px 50px;
+        gap: 50px;
+    }
 
-#img-tv {
-    grid-area: img1;
-    justify-self: center;
-    align-self: center;
-    width: 90%
-}
+    #content p {
+        font-size: 1.3rem;
+        text-align: left;
+    }
 
-#content {
-    grid-area: content;
-}
+    #hr {
+        margin-top: -25px;
+        width: 95%;
+    }
 
-#content p {
-    text-align: justify;
-    justify-self: center;
-    width: 90%;
-    font-size: 1.4rem;
-}
+    #genero {
+        display: flex;
+        list-style-type: none;
+        gap: 25px;
+        padding: 0;
+    }
 
-#rating h2, #assistir h2, #classificacoes h2 {
-    font-style: italic;
-}
+    #genero li {
+        border: 4px solid #C2A47E;
+        border-radius: 10px;
+        width: 110px;
+        text-align: center;
+        font-size: 1.2rem;
+    }
 
-#genero {
-    display: inline-flex;
-    list-style-type: none;
-    gap: 30px;
-}
+    #rating h2, #assistir h2, #classificacoes h2 {
+        font-style: italic;
+    }
 
-#genero li {
-    border: 4px solid #C2A47E;
-    border-radius: 10px;
-    width: 110px;
-    text-align: center;
-    font-size: 1.2rem;
-}
+    #content2 {
+        display: grid;
+        grid-template-areas: 
+        "rating assistir classificacoes img-protagonista";
+        /* ajustar o gap */
+    }
 
-#rating {
-    grid-area: rating;
-    justify-self: center;
-}
+    #rating {
+        grid-area: rating;
+        justify-self: center;
+        align-items: center;
+    }
 
-#assistir {
-    grid-area: assistir;
-    justify-self: center;
-}
+    #rating h2 {
+        justify-self: center;
+    }
 
-#classificacoes {
-    grid-area: classificações;
-    justify-self: center;
-}
+    #rating-img {
+        height: 20%;
+    }
 
-#img-protagonista {
-    grid-area: img-protagonista;
-    justify-self: center;
-    margin-top: -90px;
-    
-}
+    #assistir {
+        grid-area: assistir;
+        display: flexbox;
+        justify-self: center;
+    }
+
+    #classificacoes {
+        grid-area: classificacoes;
+    }
+
+    #img-protagonista {
+        grid-area: img-protagonista;
+        margin-top: -55px;
+        justify-self: right;
+        padding-right: 40px;
+    }
+
+    /* Estilização da section imgs */
+    #imgs {
+        display: grid;
+        grid-template-areas: 
+        "img1 img2 img3"
+        "img4 img5 img6"
+        "img7 img8 img9";
+        padding: 0px 40px;
+        margin-block: 70px 130px;
+        gap: 20px;
+    }
+
+    #img1 {
+        grid-area: img1;
+    }
+
+    #img2 {
+        grid-area: img2;
+    }
+
+    #img3 {
+        grid-area: img3;
+    }
+
+    #img4 {
+        grid-area: img4;
+    }
+
+    #img5 {
+        grid-area: img5;
+    }
+
+    #img6 {
+        grid-area: img6;
+    }
+
+    #img7 {
+        grid-area: img7;
+    }
+
+    #img8 {
+        grid-area: img8;
+    }
+
+    #img9 {
+        grid-area: img9;
+    }
+
+    #img1, #img2, #img3, #img4, #img5, #img6, #img7, #img8, #img9 {
+        width: 100%;
+    } 
 
 
 /* Estilização do footer */
@@ -149,7 +208,6 @@ footer {
     color: #C0A07A;
     font-style: italic;
     font-weight: 100;
-    font-size: 23px;
 }
 
 .footer-column {
@@ -174,7 +232,8 @@ footer {
 
     input {
         font-family: "Cartoro";
-        border-color: 20px solid #DBBF9C;
+        border: 3px solid #DBBF9C;
+        border-radius: 20px;
         padding: 7px;
     }
 
@@ -199,7 +258,7 @@ footer {
     }
 
     /* Links Rápidos */
-    .links-content {
+    .links-footer {
         display: flex;
         flex-direction: column;
         gap: 5px;
