--- a/assets/css/principal.css
+++ b/assets/css/principal.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Castoro";
     margin: 0%;
@@ -43,6 +47,26 @@ header {
     height: 80px;
 }
 
+#menu-hamburguer{
+    display: none;
+}
+
+.menu-btn{
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 25px;
+    height: 22px;
+    cursor: pointer;
+}
+
+.menu-btn span{
+    display: block;
+    height: 4px;
+    width: 100%;
+    background-color:black;
+}
+
 #links-header {
     list-style-type: none;
     display: flex;
@@ -60,18 +84,19 @@ header nav {
 }
 
 
+
 /* Estilização - hero */
 
 #hero {
-    line-height: 0; /* elimina o espaçamento causado pela linha de texto */
+    line-height: 0; 
 }
 
 #rolo-filmes {
-    display: block; /* impede o comportamento inline */
+    display: block; 
     width: 100%;
     margin: 0;
     padding: 0;
-    margin-top: -10%;
+    margin-top: -9%;
 }
 
 #frase-hero{
@@ -80,6 +105,7 @@ header nav {
     margin-bottom: 15% ;
     display: flex;
     flex-direction: column;
+    font-size: 1.5rem;
 }
 
 #titulo-hero{
@@ -100,11 +126,15 @@ header nav {
 
 .grid-filmes{
     display: grid;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: repeat(5,  1fr);
+    overflow-x:auto;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
 }
 
 .imagem-filme{
-    width: 245px;
+    width: 100%;
+    max-width: 245px;
 }
 
 .info-filme{
@@ -166,53 +196,179 @@ footer {
     width: 200px;
 }
 
-    /* Contato */
-    #contato p {
-        font-style: italic;
-    }
+/* Contato */
+#contato p {
+     font-style: italic;
+}
 
-    #contact-button {
-        white-space: nowrap;
-    }
+#contact-button {
+    white-space: nowrap;
+}
 
-    /* Newsletter */
-    form {
+/* Newsletter */
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+input {
+    font-family: "Cartoro";
+    border-color: #DBBF9C;
+    border-radius: 20px;
+    border-style: solid;
+    padding: 7px;
+}
+
+#newsletter-button {
+    margin-inline: auto;
+    width: 100px;
+}
+
+/* Citação */
+.quote-content{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+q {
+    font-style: italic;
+}
+
+cite {
+    font-style: normal;
+}
+
+/* Links Rápidos */
+.links-content {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    text-align: left;
+    gap: 5px;
+}
+
+/* Tablets */
+@media (max-width: 1024px) {
+    #links-header {
+        gap:40px;
+    }
+}
+
+/* Celulares */
+@media (max-width: 768px) {
+    body{
+        overflow-x: hidden;
+    }
+    .menu-btn{
         display: flex;
+        position: absolute;
+        right: 8%;
+        cursor: pointer;
+    }
+
+    .menu {
+        position: absolute;
+        top: 80px;
+        right: 0;
+        left: 0;
+        display: none;
         flex-direction: column;
-        gap: 10px;
+        background-color: #FFFBF0;
+        border-top: 2px solid #C0A07A;
+        border-bottom: 2px solid #C0A07A;
+        padding: 40px;
+        align-items: center;
     }
-
-    input {
-        font-family: "Cartoro";
-        border-color: #DBBF9C;
-        border-radius: 20px;
-        border-style: solid;
-        padding: 7px;
-    }
-
-    #newsletter-button {
-        margin-inline: auto;
-        width: 100px;
-    }
-
-    /* Citação */
-    .quote-content{
+        
+    #menu-hamburguer:checked ~ .menu {
         display: flex;
+    }
+        
+    #menu-hamburguer:checked + .menu-btn span:nth-child(1) {
+        transform: rotate(45deg) translate(10px, 7px);
+    }
+        
+    #menu-hamburguer:checked + .menu-btn span:nth-child(2) {
+        opacity: 0;
+    }
+        
+    #menu-hamburguer:checked + .menu-btn span:nth-child(3) {
+        transform: rotate(-45deg) translate(5px, -5px);
+    }
+
+    #titulo-hero{
+        font-size: 2.3rem; 
+    }
+
+    .titulo-section{
+        font-size: 1.3rem;    
+    }
+
+    #frase-hero{
+        font-size: 0.75rem;
+    }
+
+    #links-header{
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        text-align: center;
+        position: absolute;
+        top: 30%;
+        left: 0;
+        right: 0;
+        gap: 20px;
+        font-size: 0.9rem;
+    }
+
+    .grid-filmes{
+        gap:40px;
+    }
+
+    .filme-card {
+        width: 150px;
+    }
+
+    .imagem-filme {
+        width: 100%;
+        max-width: 150px;
+    }
+
+    .info-filme,
+    .rating-filme {
+        gap: 2%;
+        width: 150px;
+        font-size: 0.8rem;
+    }
+
+    .links-filme {
+        width: 100%;
+    }
+
+    .saiba-mais {
+        width: 60%;
+        font-size: 0.8rem;
+        padding: 5%;
+    }
+
+    .ver-trailer {
+        font-size: 0.7rem;
+    }
+
+    #div-footer {
         flex-direction: column;
-        gap: 10px;
+        align-items: center;
+        gap: 30px;
+        text-align: center;
+        width: 100%;
+        font-size: 0.8rem;
     }
 
-    q {
-        font-style: italic;
-    }
-
-    cite {
-        font-style: normal;
-    }
-
-    /* Links Rápidos */
     .links-content {
-        display: flex;
-        flex-direction: column;
+        align-items: left;
+        text-align: left;
         gap: 5px;
     }
+}
