--- a/assets/css/principal.css
+++ b/assets/css/principal.css
@@ -49,6 +49,11 @@
 .imagem-filme{
     width: 100%;
     max-width: 245px;
+    transition: all 0.4s ease;
+}
+
+.imagem-filme:hover{
+    opacity: 0.8;
 }
 
 .info-filme{
@@ -77,7 +82,6 @@
     width: 40%;
     border-radius: 1rem;
     text-align: center;
-    transition: 0.4s;
 }
 
 .saiba-mais:hover{
@@ -88,6 +92,14 @@
     margin-top: 3%;
     font-size: 0.85rem;
     text-decoration: underline;
+}
+
+.ver-trailer:hover{
+    color: #A8855E;
+}
+
+.saiba-mais, .ver-trailer{
+    transition: all 0.4s ease;
 }
 
 #recomendados{
