--- a/assets/css/principal.css
+++ b/assets/css/principal.css
@@ -10,7 +10,7 @@
     width: 100%;
     margin: 0;
     padding: 0;
-    margin-top: -9%;
+    margin-top: -17%;
 }
 
 #frase-hero{
@@ -123,7 +123,7 @@
     }
 
     #frase-hero{
-        font-size: 0.75rem;
+        font-size: 0.6rem;
     }
 
     .grid-filmes{
@@ -158,5 +158,9 @@
 
     .ver-trailer {
         font-size: 0.7rem;
+    }
+
+    #rolo-filmes {
+        margin-top: -50%;
     }
 }
