--- a/assets/css/sobre.css
+++ b/assets/css/sobre.css
@@ -39,7 +39,8 @@
 #texto{
     margin-right: 10%;
 }
-#curiosidades-section,#lugares-que-conheci-section, #proximos-destinos-section {
+
+#curiosidades-section,#lugares-que-conheci-section, #proximos-destinos-section, #pessoas-importantes-section {
     margin-left: 5%;
     margin-right: 5%;
 }
@@ -221,6 +222,100 @@
     background-color: #a48463;
 }
 
+#caderno{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 15%;
+}
+
+#container-fotos{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+#img-caderno{
+  align-items: center;
+  justify-content: center;
+  max-width:100%;
+}
+
+#familia{
+  position: absolute;
+  top:13%;
+  left: 12%;
+  width: 17%;
+}
+
+#giovanna{
+  position: absolute;
+  top: 53%;
+  left: 13%;
+  width: 17%;
+}
+
+#miguel{
+  position: absolute;
+  top: 68%;
+  left: 10%;
+  width: 10%;
+}
+
+#amigos-celula{
+  position: absolute;
+  top: 68%;
+  left: 30%;
+  width: 16%;
+}
+
+#amigas-shalom{
+  position: absolute;
+  top: 42%;
+  left: 30%;
+  width: 16%;
+}
+
+#leo{
+  position: absolute;
+  top:12.5%;
+  left: 33%;
+  width: 10%;
+}
+
+#vovo{
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  width: 16%;
+}
+
+#besties{
+  position: absolute;
+  top: 35%;
+  left: 55%;
+  width: 16%;
+}
+
+#soso{
+  position: absolute;
+  top: 15%;
+  left: 71%;
+  width: 14%;
+}
+
+#amigas-danca{
+  position: absolute;
+  top: 58%;
+  left: 53%;
+  width: 16%;
+}
+#joao{
+  position: absolute;
+  top: 35%;
+  left: 73%;
+  width: 10%;
+}
 
 @media (max-width: 1200px) {
     #hero {
@@ -314,12 +409,6 @@
     }
     .descricao-section {
       font-size: 0.9rem;
-    }
-    footer {
-      font-size: 0.9rem;
-    }
-    footer input, footer button {
-      width: 100%;
     }
   }
   
