--- a/assets/css/sobre.css
+++ b/assets/css/sobre.css
@@ -155,11 +155,11 @@
     width: 90%;
 }
 
-#modelo, #presente{
+#modelo, #presente, #azeitonas{
   width: 100%;
 }
 
-#barbie, #presente, #modelo {
+#barbie, #presente, #modelo, #azeitonas, #telescopio{
   margin-top: 10%
 }
 
