--- a/assets/css/sobre.css
+++ b/assets/css/sobre.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Castoro');
 #hero{
+    margin-top: 20%;
     text-align: center;
     font-size: 5rem;
 }
@@ -7,7 +8,7 @@
 #estrelas{
     position: absolute;
     left: 25%;
-    top: 20%;
+    top: 40%;
     width: 8%;
 }
 #mari{
@@ -22,7 +23,7 @@
 #coracoes{
     position: absolute;
     right: 31%;
-    top: 40%;
+    top: 60%;
     width: 8%;
 }
 
